2011-08-11  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_load_metadata.m: now calculates frame rate from data saved in 'ExperimentConfig' file.
	* pan_analyze_CellExpt.m:  updated to generate evt (filtered) files if necessary.
	* pan_process_CellExpt.m:  same.
	* pan_publish_CellExpt.m:  corrected reference to 'duration' of experiment to 'seconds', the way it's referenced in the 'ExperimentConfig' file.
	* pan_sim_newt_run.m:  saves files in default 'vrpn.mat' format instead of 'evt' format.

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_publish_CellExpt.m:  corrected report output.

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_gen_filelist.m:  added.  generates a list of filenames that match the wells,passes parameters given to it.
	* pan_MCU2um.m:  added.  converts MCU parameter to microns.
	* pan_process_CellExpt.m:  fixed typo to function call.

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_read_well_layout.m:  added.  Reads in the "well layout" csv file generated by Russ's Well Layout program designed for Panoptes.   The data are outputted to a data structure whose design depends on the fields saved by the well layout application.
	* pan_combine_data.m:  added.  uses the well_layout structure to combine data using the inputted field as the means to "slice" through the data.  Only works for a single parameter at this time.
	* pan_process_CellExpt.m:  added.  Analyses, reports, and publishes results for the "Cell Experiment" specified for Panoptes..
	* pan_analyze_CellExpt.m:  added.  contains analysis protocol for Cell Experiment.
	* pan_publish_CellExpt.m:  added.  Publishes results for "Cell Experiment".
	* pan_load_metadata.m:  modified to use pan_read_well_layout.m
		
2011-08-09  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_wellpass.m:  re-ordered outputs to follow the function names convention of "well" then "pass".
	
2011-07-22  Jeremy Cribb <jcribb@email.unc.edu>