@@ -1,0 +1,8 @@
+function pan_clean_path(filepath)
+
+cd(filepath)
+
+delete('*.vrpn.evt.mat', '*.svg', '*.png', '*.fig', '*.html');
+
+
+
